--- a/app/src/main/res/drawable/circle_pressed.xml
+++ b/app/src/main/res/drawable/circle_pressed.xml
@@ -8,8 +8,8 @@
 
     <gradient
         android:angle="270"
-        android:startColor="#00688B"
-        android:endColor="#368B9B"
+        android:endColor="#00688B"
+        android:startColor="#368B9B"
         android:type="linear" />
 
     <size
