--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -55,7 +55,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/circle"
+                    android:background="@drawable/clickablecircle"
                     android:gravity="center"
                     android:text="Hey There!"
                     android:textColor="#FFFFFF"
@@ -78,7 +78,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/circle"
+                    android:background="@drawable/clickablecircle"
                     android:gravity="center"
                     android:text="I'm Lumpy"
                     android:textColor="#FFFFFF"
@@ -101,7 +101,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/circle"
+                    android:background="@drawable/clickablecircle"
                     android:gravity="center"
                     android:text="Miss you"
                     android:textColor="#FFFFFF"
@@ -135,7 +135,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/circle"
+                    android:background="@drawable/clickablecircle"
                     android:gravity="center"
                     android:text="Call me?"
                     android:textColor="#FFFFFF"
@@ -158,7 +158,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/circle"
+                    android:background="@drawable/clickablecircle"
                     android:gravity="center"
                     android:text="Yo"
                     android:textColor="#FFFFFF"
@@ -181,7 +181,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/circle"
+                    android:background="@drawable/clickablecircle"
                     android:gravity="center"
                     android:text="Almost there"
                     android:textColor="#FFFFFF"
