--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.caren.chatme.TextActivity"
-    android:background="#255E69">
+    android:background="#024C68">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,8 +15,8 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Ray"
         android:id="@+id/tvName"
-        android:textSize="50dp"
-        android:textColor="#57DFF9"
+        android:textSize="80dp"
+        android:textColor="#62B180"
         android:layout_marginTop="40dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
